@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed a crash when deleting subfactories in your archive
+    - Fixed that the fuel picker would sometimes show more than one kind of fuel as the currently selected one
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.13
